--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include 'kodilla-stream'
 include 'kodilla-stream:kodilla-exception'
 findProject(':kodilla-stream:kodilla-exception')?.name = 'kodilla-exception'
 include 'kodilla-exception'
+include 'kodilla-rps'
+include 'kodilla-good-patterns'
 
