--- a/settings.gradle
+++ b/settings.gradle
@@ -2,10 +2,9 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-stream:kodilla-exception'
-findProject(':kodilla-stream:kodilla-exception')?.name = 'kodilla-exception'
 include 'kodilla-exception'
 include 'kodilla-rps'
 include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
-
+include 'kodilla-spring-web'
