--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,6 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-stream:kodilla-exception'
 include 'kodilla-exception'
-include 'kodilla-rps'
 include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
@@ -11,3 +10,5 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'kodilla-patterns2'
+include 'kodilla-patterns2'
